rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__nonexistent_item.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
`crate::DoesNotExist` not found. Did you mean one of these?

• `crate::TestEnum` (Enum)
• `crate::prefix_tests` (Module)
• `crate::ComplexTrait` (Trait)
• `crate::markdown_test` (Module)
• `crate::link_resolution_tests` (Module)
