rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__recursive_filtering.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: fixture_crate
Kind: Module
Visibility: Public
Defined at: fixture_crate

A minimal test crate for rustdoc JSON testing


Structs:
GenericStruct // A generic struct for testing multi-paragraph documentation. [+14 more lines]
MarkerOne // First implementor of [`Marker`].
MarkerTwo // Second implementor of [`Marker`].
NotThreadSafe // A type that is not thread-safe, to exercise negative auto-trait impls [+1 more lines]
ReachableViaPrivateModule // A struct accessible only via re-export from a private module.
SubStruct // A struct in a submodule
TestStruct // A simple struct for testing basic functionality. [+6 more lines]
TupleStruct // A tuple struct for testing
UnitStruct // A unit struct for testing
Vec // A contiguous growable array type, written as `Vec<T>`, short for 'vector'. [+257 more lines]
