rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__recursive_module_listing.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: fixture_crate
Kind: Module
Visibility: Public
Defined at: fixture_crate

A minimal test crate for rustdoc JSON testing


Modules:
link_resolution_tests // Module for testing intra-doc link resolution
link_resolution_tests::nested // Nested module for testing scoped resolution
link_resolution_tests::nested::deeply_nested // Another nested module
markdown_test // # Markdown: Syntax [+332 more lines]
namespace_collisions // Module for testing namespace disambiguation with kind discriminators. [+3 more lines]
namespace_collisions::both // A module sharing its name with [`both()`] below.
prefix_tests // Edge cases for path-prefix resolution in use-item sources and intra-doc links. [+11 more lines]
prefix_tests::deep // A nested module to exercise `self::`, `super::`, and `super::super::`.
prefix_tests::deep::glob_reexport // Exercises the "glob brings a name into scope, then re-export that [+1 more lines]
prefix_tests::deep::glob_reexport::deep // A nested module to exercise `self::`, `super::`, and `super::super::`.
reexport_mod
submodule // A module with items

Structs:
GenericStruct // A generic struct for testing multi-paragraph documentation. [+14 more lines]
ReachableViaPrivateModule // A struct accessible only via re-export from a private module.
SubStruct // A struct in a submodule
TestStruct // A simple struct for testing basic functionality. [+6 more lines]
TupleStruct // A tuple struct for testing
UnitStruct // A unit struct for testing
link_resolution_tests::LinkTestStruct // Struct in link test module
link_resolution_tests::RenamedTestStruct // A simple struct for testing basic functionality. [+6 more lines]
link_resolution_tests::SubStruct // A struct in a submodule
link_resolution_tests::nested::NestedStruct // Struct in nested module
link_resolution_tests::nested::deeply_nested::DeepStruct // Struct in deeply nested module
namespace_collisions::both::Inside // An item inside the colliding module.
prefix_tests::DocOuter // Intra-doc links from the outer module: [+4 more lines]
prefix_tests::PrefixMarker // A sibling target for `self::` / `super::PrefixMarker` references.
prefix_tests::deep::CrateAlias // A struct in a submodule
prefix_tests::deep::DeepMarker // A marker target inside `deep`.
prefix_tests::deep::DocDeep // Intra-doc links from a nested module: [+4 more lines]
prefix_tests::deep::SelfAliasDeep // A marker target inside `deep`.
prefix_tests::deep::SuperAlias // A sibling target for `self::` / `super::PrefixMarker` references.
prefix_tests::deep::SuperSuperAlias // A simple struct for testing basic functionality. [+6 more lines]
prefix_tests::deep::glob_reexport::DocOuter // Intra-doc links from the outer module: [+4 more lines]
prefix_tests::deep::glob_reexport::GlobReexportedMarker // A sibling target for `self::` / `super::PrefixMarker` references.
prefix_tests::deep::glob_reexport::PrefixMarker // A sibling target for `self::` / `super::PrefixMarker` references.
reexport_mod::SubStruct // A struct in a submodule
submodule::SubStruct // A struct in a submodule

Enums:
GenericEnum // A generic enum for testing [+2 more lines]
TestEnum // An enum for testing [+2 more lines]
reexport_mod::TestEnum // An enum for testing [+2 more lines]
submodule::TestEnum // An enum for testing [+2 more lines]

Traits:
ComplexTrait // A more complex trait demonstrating various features
TestTrait // A trait for testing extremely long documentation that exceeds line limits. [+22 more lines]
link_resolution_tests::nested::TestTrait // A trait for testing extremely long documentation that exceeds line limits. [+22 more lines]

Functions:
ReachableViaPrivateModule::private_module_method // A method on a struct whose module is private. [+5 more lines]
async_function // An async function
generic_function // A generic function
link_resolution_tests::LinkTestStruct::get_data // Another method
link_resolution_tests::LinkTestStruct::new // Method for testing Self resolution
link_resolution_tests::RenamedTestStruct::get_field // Get the field value
link_resolution_tests::RenamedTestStruct::increment_count // Update the count
link_resolution_tests::RenamedTestStruct::new // Create a new TestStruct
link_resolution_tests::nested::NestedStruct::new // Create new NestedStruct
namespace_collisions::both // A function sharing its name with the [`both`] module above.
reexport_mod::sub_function // A function in a submodule
sub_function // A function in a submodule
submodule::SubStruct::double // Double the value
submodule::SubStruct::get_value // Get the value
submodule::SubStruct::new // Create a new SubStruct
submodule::sub_function // A function in a submodule
test_function // A public function

Constants:
TEST_CONSTANT // A const for testing

Statics:
TEST_STATIC // A static for testing

Variants:
GenericEnum::Mixed // Variant with mixed generics
GenericEnum::Simple // Simple variant
GenericEnum::WithData // Variant with generic data
VariantA // Variant A (see also [`crate::GenericEnum`])
VariantB // Variant B with data
VariantC // Variant C with struct data (`name` and `value`)
reexport_mod::VariantA // Variant A (see also [`crate::GenericEnum`])
reexport_mod::VariantB // Variant B with data
reexport_mod::VariantC // Variant C with struct data (`name` and `value`)
submodule::TestEnum::VariantA // Variant A (see also [`crate::GenericEnum`])
submodule::TestEnum::VariantB // Variant B with data
submodule::TestEnum::VariantC // Variant C with struct data (`name` and `value`)
submodule::VariantA // Variant A (see also [`crate::GenericEnum`])
submodule::VariantB // Variant B with data
submodule::VariantC // Variant C with struct data (`name` and `value`)

AssocConst:
link_resolution_tests::RenamedTestStruct::ASSOCIATED_CONST // This is an associated constant for a struct
