rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__recursive_multiple_filters.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: fixture_crate
Kind: Module
Visibility: Public
Defined at: fixture_crate

A minimal test crate for rustdoc JSON testing


Traits:
ComplexTrait // A more complex trait demonstrating various features
TestTrait // A trait for testing extremely long documentation that exceeds line limits. [+22 more lines]

Functions:
async_function // An async function
generic_function // A generic function
private_function // A private function
sub_function // A function in a submodule
test_function // A public function
