rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__recursive_submodule_listing.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: submodule
Kind: Module
Visibility: Public
Defined at: test_crate::submodule

A module with items


Structs:
SubStruct // A struct in a submodule

Enums:
TestEnum // An enum for testing [+2 more lines]

Functions:
SubStruct::double // Double the value
SubStruct::get_value // Get the value
SubStruct::new // Create a new SubStruct
sub_function // A function in a submodule

Variants:
TestEnum::VariantA // Variant A (see also [`crate::GenericEnum`])
TestEnum::VariantB // Variant B with data
TestEnum::VariantC // Variant C with struct data (`name` and `value`)
VariantA // Variant A (see also [`crate::GenericEnum`])
VariantB // Variant B with data
VariantC // Variant C with struct data (`name` and `value`)
