rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__search.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Search results for 'trigger line-based truncation' in crate 'test-crate':

• test-crate::TestTrait (Trait) - score: 53
    A trait for testing extremely long documentation that exceeds line limits. [+22 more lines]
