rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__verbosity_minimal.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: fixture_crate
Kind: Module
Visibility: Public
Defined at: fixture_crate

Modules:
link_resolution_tests
markdown_test
namespace_collisions
prefix_tests
private_detail
reexport_mod
submodule

Structs:
GenericStruct
ReachableViaPrivateModule
SubStruct
TestStruct
TupleStruct
UnitStruct
Vec

Enums:
GenericEnum
TestEnum

Traits:
ComplexTrait
TestTrait

Functions:
async_function
generic_function
private_function
sub_function
test_function

Constants:
TEST_CONSTANT

Statics:
TEST_STATIC

Variants:
VariantA
VariantB
VariantC
